<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.8"
        android:scaleType="fitXY"
        android:src="@drawable/map" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/slackey"
            android:text="@string/topic"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPink"
            android:layout_margin="@dimen/width12"
            android:textSize="@dimen/width13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view"
            android:fontFamily="@font/julee"
            android:text="@string/name"
            android:layout_margin="@dimen/width12"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPink"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_below="@id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:layout_margin="@dimen/width12"
            android:inputType="textMultiLine" />


        <TextView
            android:id="@+id/hint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/julee"
            android:text="@string/correct_Hint"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/width12"
            android:background="@color/colorPink"
            android:textSize="@dimen/width13"
            android:textStyle="bold" />




    </LinearLayout>





</ScrollView>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/julee"
        android:text="@string/start"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPink"
        android:layout_margin="@dimen/width12"

        android:textSize="@dimen/width13"
        android:textStyle="bold"
        android:layout_above="@id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

       />
        <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/start_button"
        android:layout_width="@dimen/width14"
        android:layout_height="@dimen/width14"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/geograpghy_pic"
        app:civ_border_color="@color/colorPink"
        app:civ_border_width="@dimen/width15"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/width12"
        />
</RelativeLayout>
